<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/app_header">
        <!-- Meters -->
        <SeekBarPreference
            app:defaultValue="1000"
            app:min="1"
            android:max="10000"
            app:key="@string/key_sub_radius"
            app:title="@string/sub_title"
            app:showSeekBarValue="true"
            app:stepValue="50"
            app:format="%d meters"
            app:summary="Range of chatters whose message will be received by you in meters."  />

        <!-- Meters -->
        <SeekBarPreference
            app:defaultValue="1000"
            app:min="1"
            android:max="10000"
            app:key="@string/key_shout_radius"
            app:title="@string/pub_title"
            app:showSeekBarValue="true"
            app:stepValue="50"
            app:format="%d meters"
            app:summary="Range of chatters that will receive your messages in meters."  />

        <!-- Minutes -->
        <SeekBarPreference
            app:defaultValue="60"
            app:min = "5"
            android:max = "1440"
            app:key="@string/key_timestamp"
            app:title="@string/tim_title"
            app:showSeekBarValue="true"
            app:format="%d minutes"
            app:summary="Time elapsed since the sending of the message in minutes."  />

        <ListPreference
            app:defaultValue="circle"
            app:entries="@array/shape_entries"
            app:entryValues="@array/shape_values"
            app:key="@string/key_shape"
            app:title="@string/shape_title"
            app:useSimpleSummaryProvider="true"  />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ip_header">

        <EditTextPreference
            app:key="@string/key_mqtt_url"
            app:title="@string/mqtt_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="3M"
            app:title="@string/m3_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="IM"
            app:title="@string/im_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
